[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [{ name = "GreyElaina", email = "GreyElaina@outlook.com" }]
license = { text = "MIT" }
requires-python = ">=3.7,<4.0"
dependencies = ["typing-extensions>=3.10.0; python_version < \"3.9\""]
name = "graia-broadcast"
version = "0.21.1"
description = "a highly customizable, elegantly designed event system based on asyncio"

[project.urls]
[tool.pdm]
includes = ["src/graia"]
[tool.pdm.dev-dependencies]
dev = [
    "black<23.0.0,>=22.1.0",
    "pre-commit",
    "flake8<5.0.0,>=4.0.1",
    "isort<6.0.0,>=5.10.1",
    "pytest<8.0.0,>=7.0.1",
    "coverage<7.0.0,>=6.3.2",
    "pytest-asyncio<1.0.0,>=0.18.2",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
omit = ["*/test/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # standard pragma
    "pragma: no cover",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if (typing\\.)?TYPE_CHECKING( is True)?:",
    "\\.\\.\\.",
    "pass",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # Don't complain overload method / functions
    "@(typing\\.)?overload",
    # don't complain __repr__ and __str__ and __repr_args__ for representation
    "def __repr__",
    "def __str__",
    "def __repr_args__",
    "except ImportError:", # Don't complain about import fallback
]
