[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [{ name = "GreyElaina", email = "GreyElaina@outlook.com" }]
license = { text = "MIT" }
requires-python = ">=3.8,<4.0"
dependencies = [
    "typing-extensions>=3.10.0; python_version < \"3.9\"",
    "creart~=0.3.0",
]
name = "graia-broadcast"
version = "0.23.4"
description = "a highly customizable, elegantly designed event system based on asyncio"

[tool.pdm.build]
includes = ["src/graia"]

[tool.pdm.dev-dependencies]
dev = [
    "black<23.0.0,>=22.1.0",
    "pre-commit",
    "flake8<5.0.0,>=4.0.1",
    "isort<6.0.0,>=5.10.1",
    "pytest<8.0.0,>=7.0.1",
    "coverage<7.0.0,>=6.3.2",
    "pytest-asyncio<1.0.0,>=0.18.2",
]

[project.entry-points."creart.creators"]
broadcast = "graia.broadcast.creator:BroadcastCreator"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
omit = ["*/test/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # standard pragma
    "pragma: no cover",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if (typing\\.)?TYPE_CHECKING( is True)?:",
    "\\.\\.\\.",
    "pass",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    # Don't complain overload method / functions
    "@(typing\\.)?overload",
    # don't complain __repr__ and __str__ and __repr_args__ for representation
    "def __repr__",
    "def __str__",
    "def __repr_args__",
    "except ImportError:", # Don't complain about import fallback
]

[tool.pyright]
pythonVersion = "3.7"
